@startuml PRIME
abstract class Base{
  +id : guid
}

interface guid{

}


class Person{
  +userId : PrimeUserID
  __ personal info __
  +name : Name
  +address : Address
  +dateOfBirth : Date
  +phone : PhoneNumber
  __ roles __
  +user : User
  +verifier : Verifier
  +organizationAuthority : OrganizationAuthority
  +provisioner : Provisioner
  __ prime access __
  +sites : SiteAccess[]
  + <<readonly>> activeSites : SiteAccess[]
  +requests : PrimeRequest[]
}

note top of Person
  Everyone who logs in is a Person. Depending
  on their their roles, the 'roles' attributes
  will be null or point to an instance of those
  classes.
end note

note top of User
  A user is the lowest tier role in Prime.
  It's possible for a person to login as
  another role and NOT be a User.
end note

class Name{
  +firstName : string
  +lastName : string
  +middleName : string
  + <<readonly>> fullName : string
}

interface Address{
  +street : string
  +postal : string
}

interface PhoneNumber{

}

interface PrimeUserID{

}

abstract class Role{
  +status : RoleStatus
  +person : Person
  +type : User | Verifier | OrganizationAuthority | Provisioner
  +selfDeclarations : SelfDeclaration[]
}

class User{
  +college : Colleges[]
  +license : License
  +isDeviceProvider : boolean
  +PoSUserId : string
}

class Verifier{

}

class OrganizationAuthority{

}

class Provisioner{

}

class License{
  +number : string
  +licenseClass : LicenseClasses
  +expiry : Date
}

class PrimeRequest{
  +applicant : Role
  +imitationDate : Date
  +priority : PrimeRequestPriority
  +status : PrimeRequestStatus
}

class ProvisionerChange{

}

class ProvisionerEnrollment{

}

class VerifierChange{

}

class VerifierEnrollment{

}

class Site{
  +name : string
  +address : Address
}

class SiteAccess{
  +site : Site
  +person : Role
  +status : SiteAccessStatus
  +reason : string
  +startDate : Date
  +endDate : Date
  +vendor : Vendor
  +personalAccessToPharmaNet : boolean
  +verifier : Verifier
  +privilege : typeof Role
}

class Vendor{

}

class Group{
  +members : T[]
  +find()
  +contains()
}

class NamedCollection{

}

class PeopleGroup{

}

class SelfDeclaration{
  +question : string
  +userAnswer : boolean
  +userDetails : string
}

enum RoleStatus {
    PENDING = "Pending",
    ACTIVE = "Active",
    EXPIRING = "Expiring",
    INACTIVE_OR_REJECTED = "Inactive or rejected"
}
enum Colleges {
    None = "None",
    CPSBC = "College of Physicians and Surgeons of BC (CPSBC",
    CPBC = "College of Pharmacists Of BC (CPBC)",
    CRNBC = "College of Registered Nurses of BC (CRNBC)"
}
enum LicenseClasses {
    FULL_PHARMACIST = "Full pharmacist"
}
enum PrimeRequestPriority {
    URGENT = "Urgent",
    NORMAL = "Normal",
}
enum PrimeRequestStatus {
    RESUBMISSION = "Resubmission",
    SAVED_FOR_COMPLETION = "Saved for completion",
    RETURNED_BY_APPLICANT = "Returned by applicant",
    MANUAL_REVIEW = "Manual review",
    PROVISIONING = "Provisioning"
}
enum SiteAccessStatus {
    PENDING_APPROVAL = "Pending Approval",
    INITIATED = "Initiated",
    RETURNED_TO_APPLICANT = "Returned to applicant",
    ACTIVE = "Active"
}

Role --> SelfDeclaration
Person --> Colleges
Base --> guid
Person --> PrimeUserID
Person --> Name
Person --> Address
Person --> Date
Person --> PhoneNumber
Person --> User
Person --> Verifier
Person --> OrganizationAuthority
Person --> Provisioner
Role --> RoleStatus
Role --> Person
Role --> User
Role --> Verifier
Role --> OrganizationAuthority
Role --> Provisioner
User --> License
License --> LicenseClasses
License --> Date
PrimeRequest --> Role
PrimeRequest --> Date
PrimeRequest --> PrimeRequestPriority
PrimeRequest --> PrimeRequestStatus
Site --> Address
SiteAccess --> Site
SiteAccess --> Role
SiteAccess --> SiteAccessStatus
SiteAccess --> Date
SiteAccess --> Vendor
SiteAccess --> Verifier
Base <|-- Person
Base <|-- Role
Role <|-- User
Role <|-- Verifier
Role <|-- OrganizationAuthority
Role <|-- Provisioner
Base <|-- PrimeRequest
PrimeRequest <|-- ProvisionerChange
PrimeRequest <|-- ProvisionerEnrollment
PrimeRequest <|-- VerifierChange
PrimeRequest <|-- VerifierEnrollment
Base <|-- Site
Base <|-- SiteAccess
Base <|-- Vendor
Base <|-- Group
Group <|-- NamedCollection
Group <|-- PeopleGroup
@enduml
